@@ -1,10 +1,10 @@
 [Stats]
-EditorSecs=25131
-DesignerSecs=1505
+EditorSecs=25953
+DesignerSecs=1507
 InspectorSecs=1409
-CompileSecs=8218730
-OtherSecs=7768
+CompileSecs=8292143
+OtherSecs=7809
 StartTime=07/04/2015 13:17:38
 RealKeys=0
 EffectiveKeys=0
-DebugSecs=13340
+DebugSecs=13768
